--- a/src/alpine-influxdb/_rootfs/etc/influxdb/influxdb.conf
+++ b/src/alpine-influxdb/_rootfs/etc/influxdb/influxdb.conf
@@ -213,7 +213,7 @@ reporting-disabled = true
 ### Controls the listener for collectd data.
 ###
 
-[collectd]
+[[collectd]]
   enabled = true
   bind-address = ":25826"
   database = "collectd"
@@ -234,7 +234,7 @@ reporting-disabled = true
 ### Controls the listener for OpenTSDB data.
 ###
 
-[opentsdb]
+[[opentsdb]]
   enabled = false
   # bind-address = ":4242"
   # database = "opentsdb"
