Update telegraf up to 0.13.1

--- a/src/alpine-telegraf/Dockerfile
+++ b/src/alpine-telegraf/Dockerfile
@@ -1,13 +1,15 @@
 FROM quay.io/stonevil/alpine-glibc
 MAINTAINER stonevil@gmail.com
 
-ENV TELEGRAF_VERSION=${TELEGRAF_VERSION:-0.12.1-1}
+ENV TELEGRAF_VERSION=${TELEGRAF_VERSION:-0.13.1}
 ENV TELEGRAF_DOWNLOAD_URL=https://dl.influxdata.com/telegraf/releases/telegraf-${TELEGRAF_VERSION}_linux_amd64.tar.gz
 
 LABEL com.stonevil.telegraf.version=${TELEGRAF_VERSION}
 
-RUN ${SOFTWARE_DOWNLOAD_CMD} ${TELEGRAF_DOWNLOAD_URL} | tar -zxvf - -C / && \
-  adduser -D -H -h /data/telegraf -s /bin/bash telegraf
+RUN ${SOFTWARE_DOWNLOAD_CMD} ${TELEGRAF_DOWNLOAD_URL} | tar -zxvf - -C /tmp && \
+  cp -Rf /tmp/telegraf*/* / && rm -Rf /tmp/telegraf* && \
+  adduser -D -H -h /data/telegraf -s /bin/bash telegraf && \
+  ${APK_CACHE_RM}
 
 ADD _rootfs /
 ONBUILD ADD _rootfs_vendor /
@@ -23,4 +25,4 @@ ENV DOCKER_ENDPOINT=${DOCKER_ENDPOINT:-unix:///var/run/docker.sock}
 
 CMD mkdir -p /data/telegraf && chown -Rf telegraf /data/telegraf && \
   sed -i -e 's|_INFLUXDBURL_|'"${INFLUXDB_HOST}:${INFLUXDB_PORT}"'|g' -e 's|_INFLUXDBSENSORSDB_|'"${INFLUXDB_SENSORS_DB}"'|g' -e 's|_INFLUXDBSENSORS_|'"${INFLUXDB_SENSORS}"'|g' -e 's|_INFLUXDBSENSORSPASSWORD_|'"${INFLUXDB_SENSORS_PASSWORD}"'|g' -e 's|_DOCKERENDPOINT_|'"${DOCKER_ENDPOINT}"'|g' /etc/telegraf/telegraf.conf && \
-  gosu telegraf telegraf -config /etc/telegraf/telegraf.conf
+  gosu root telegraf -config /etc/telegraf/telegraf.conf
